--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,5 +12,30 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Build and test
-        run: mvn clean verify
+      - name: Build 
+        run: mvn clean 
+
+      - name: Test
+        run: mvn test
+
+      - name: Generate Reports
+        run: mvn package
+
+      
+  docker:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/simple-java-app .
+
+      - name: Push image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/simple-java-app
